isAdvertisementSupported() method added